{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 94,
  "lineage": "550efb45-7a1f-6440-1eca-d7ce0a2ba1e5",
  "resources": [
    {
      "module": "module.backend_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "novagram_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:targetgroup/novagram-backend-lb-tg/844a6ed54825f81e",
            "arn_suffix": "targetgroup/novagram-backend-lb-tg/844a6ed54825f81e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:targetgroup/novagram-backend-lb-tg/844a6ed54825f81e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "novagram-backend-lb-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-north-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:targetgroup/novagram-backend-lb-tg/844a6ed54825f81e"
          },
          "dependencies": [
            "module.network.aws_vpc.novagram_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "novagram_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:targetgroup/novagram-frontend-lb-tg/6a1a5a651322ab59",
            "arn_suffix": "targetgroup/novagram-frontend-lb-tg/6a1a5a651322ab59",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:targetgroup/novagram-frontend-lb-tg/6a1a5a651322ab59",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:770646238400:loadbalancer/app/novagram-alb/a01debf375070e29"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "novagram-frontend-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-north-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:targetgroup/novagram-frontend-lb-tg/6a1a5a651322ab59"
          },
          "dependencies": [
            "module.network.aws_vpc.novagram_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "novagram_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:loadbalancer/app/novagram-alb/a01debf375070e29",
            "arn_suffix": "app/novagram-alb/a01debf375070e29",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "novagram-alb-861956009.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:loadbalancer/app/novagram-alb/a01debf375070e29",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "novagram-alb",
            "preserve_host_header": false,
            "region": "eu-north-1",
            "security_groups": [
              "sg-057e282ca1a0dec43"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017fe7d536d61e21e"
              },
              {
                "subnet_id": "subnet-08a0708fffa500732"
              }
            ],
            "subnets": [
              "subnet-017fe7d536d61e21e",
              "subnet-08a0708fffa500732"
            ],
            "vpc_id": "vpc-0291ce0a421c9bcbf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:loadbalancer/app/novagram-alb/a01debf375070e29"
          },
          "dependencies": [
            "module.network.aws_subnet.novagram_subnet",
            "module.network.aws_vpc.novagram_vpc",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": null,
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:targetgroup/novagram-frontend-lb-tg/6a1a5a651322ab59",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:listener/app/novagram-alb/a01debf375070e29/940cc8985713dc06",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:770646238400:loadbalancer/app/novagram-alb/a01debf375070e29",
            "mutual_authentication": null,
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-north-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": null,
            "tags": null,
            "tags_all": null,
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.frontend_target_group.aws_lb_target_group.novagram_tg",
            "module.load_balancers.aws_lb.novagram_alb",
            "module.network.aws_subnet.novagram_subnet",
            "module.network.aws_vpc.novagram_vpc",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:770646238400:internet-gateway/igw-02cd0591809bafd52",
            "id": "igw-02cd0591809bafd52",
            "owner_id": "770646238400",
            "region": "eu-north-1",
            "tags": {
              "Name": "novagram-internet-gateway"
            },
            "tags_all": {
              "Name": "novagram-internet-gateway"
            },
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.novagram_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:770646238400:route-table/rtb-05252f2c4f6e53e54",
            "id": "rtb-05252f2c4f6e53e54",
            "owner_id": "770646238400",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "novagram-private-rt"
            },
            "tags_all": {
              "Name": "novagram-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770646238400",
            "id": "rtb-05252f2c4f6e53e54",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_vpc.novagram_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:770646238400:route-table/rtb-0931aeebf5e11d6ea",
            "id": "rtb-0931aeebf5e11d6ea",
            "owner_id": "770646238400",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cd0591809bafd52",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770646238400",
            "id": "rtb-0931aeebf5e11d6ea",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.novagram_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "novagram_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c8c5c14bb226250",
            "region": "eu-north-1",
            "route_table_id": "rtb-0931aeebf5e11d6ea",
            "subnet_id": "subnet-017fe7d536d61e21e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.route_table",
            "module.network.aws_subnet.novagram_subnet",
            "module.network.aws_vpc.novagram_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e438e8101af8f53",
            "region": "eu-north-1",
            "route_table_id": "rtb-0931aeebf5e11d6ea",
            "subnet_id": "subnet-08a0708fffa500732"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.route_table",
            "module.network.aws_subnet.novagram_subnet",
            "module.network.aws_vpc.novagram_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b893a16785b5936c",
            "region": "eu-north-1",
            "route_table_id": "rtb-05252f2c4f6e53e54",
            "subnet_id": "subnet-0d12b0c854d70f0c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.novagram_private_subnet",
            "module.network.aws_vpc.novagram_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032fa0014bc921ad0",
            "region": "eu-north-1",
            "route_table_id": "rtb-05252f2c4f6e53e54",
            "subnet_id": "subnet-08c5bb0f637887e6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.novagram_private_subnet",
            "module.network.aws_vpc.novagram_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "novagram_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:770646238400:subnet/subnet-0d12b0c854d70f0c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d12b0c854d70f0c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770646238400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "novagram-private_subnet-1"
            },
            "tags_all": {
              "Name": "novagram-private_subnet-1"
            },
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770646238400",
            "id": "subnet-0d12b0c854d70f0c2",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_vpc.novagram_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:770646238400:subnet/subnet-08c5bb0f637887e6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c5bb0f637887e6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770646238400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "novagram-private_subnet-2"
            },
            "tags_all": {
              "Name": "novagram-private_subnet-2"
            },
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770646238400",
            "id": "subnet-08c5bb0f637887e6f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_vpc.novagram_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "novagram_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:770646238400:subnet/subnet-017fe7d536d61e21e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017fe7d536d61e21e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "770646238400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "novagram-public_subnet-1"
            },
            "tags_all": {
              "Name": "novagram-public_subnet-1"
            },
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770646238400",
            "id": "subnet-017fe7d536d61e21e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_vpc.novagram_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:770646238400:subnet/subnet-08a0708fffa500732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a0708fffa500732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "770646238400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "novagram-public_subnet-2"
            },
            "tags_all": {
              "Name": "novagram-public_subnet-2"
            },
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770646238400",
            "id": "subnet-08a0708fffa500732",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_vpc.novagram_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "novagram_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:770646238400:vpc/vpc-0291ce0a421c9bcbf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f91c4c49b8d7201",
            "default_route_table_id": "rtb-07814d041411eb2fa",
            "default_security_group_id": "sg-09c318b6c0a5d2c1d",
            "dhcp_options_id": "dopt-00f323835bc8f5333",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0291ce0a421c9bcbf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07814d041411eb2fa",
            "owner_id": "770646238400",
            "region": "eu-north-1",
            "tags": {
              "Name": "novagram-vpc"
            },
            "tags_all": {
              "Name": "novagram-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770646238400",
            "id": "vpc-0291ce0a421c9bcbf",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:770646238400:security-group/sg-057e282ca1a0dec43",
            "description": "ALB SG: allow HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057e282ca1a0dec43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "novagram-alb-sg",
            "name_prefix": "",
            "owner_id": "770646238400",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "novagram-alb-sg"
            },
            "tags_all": {
              "Name": "novagram-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770646238400",
            "id": "sg-057e282ca1a0dec43",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_vpc.novagram_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:770646238400:security-group/sg-0afc7773138fc2884",
            "description": "Backend SG: allow only from ALB SG (port 5000)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afc7773138fc2884",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057e282ca1a0dec43"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "novagram-backend-sg",
            "name_prefix": "",
            "owner_id": "770646238400",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "novagram-backend-sg"
            },
            "tags_all": {
              "Name": "novagram-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770646238400",
            "id": "sg-0afc7773138fc2884",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_vpc.novagram_vpc",
            "module.security_groups.aws_security_group.alb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:770646238400:security-group/sg-095ed663c22f4cf42",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095ed663c22f4cf42",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057e282ca1a0dec43"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "novagram-frontend-sg",
            "name_prefix": "",
            "owner_id": "770646238400",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "novagram-frontend-sg"
            },
            "tags_all": {
              "Name": "novagram-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0291ce0a421c9bcbf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770646238400",
            "id": "sg-095ed663c22f4cf42",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_vpc.novagram_vpc",
            "module.security_groups.aws_security_group.alb_security_group"
          ]
        }
      ]
    }
  ]
}